tests/trybuild/invalid_command.stderr
error: Unknown command: unknown
  --> tests/trybuild/invalid_command.rs:11:26
   |
11 |     #[partial(NewStruct1(unknown))]
   |                          ^^^^^^^
